@@ -62,9 +62,6 @@ abstract class EnumerableMethods {
     
     function initialize($array = array(), $default = null) {
         $this->super($array, $default);
-        $this->alias_method('fetch', 'offsetGet');
-        $this->alias_method('map', 'collect');
-        $this->alias_method('store', 'offsetSet');
     }
     
     function all($block) {
@@ -193,5 +190,8 @@ abstract class EnumerableMethods {
 abstract class Enumerable extends Enumerator { }
 
 extend('Enumerable', 'EnumerableMethods');
+alias_method('Enumerable', 'fetch', 'offsetGet');
+alias_method('Enumerable', 'map', 'collect');
+alias_method('Enumerable', 'store', 'offsetSet');
 
 ?>
