@@ -2,7 +2,6 @@
 
 require_once 'lib/functions.php';
 require_once 'lib/object.php';
-require_once 'lib/alias.php';
 require_once 'lib/enumerable.php';
 require_once 'lib/array.php';
 require_once 'lib/hash.php';
