@@ -24,6 +24,7 @@
   * Enumerable#offsetGet accepts an optional default value
   * Add Object#alias_method support
   * Add Object#alias_method_chain support
+  * Make alias_method and alias_method_chain global functions
 
 2009-03-13 - Sean Huber (shuber@huberry.com)
   * Add Enumerable (incomplete)
